--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper {
-  width: 640px;
+  width: 95%;
   margin: 0 auto;
   background: #DEDEDE;
   -webkit-border-radius: 8px;
@@ -44,8 +44,10 @@ a {
 p {
   margin: 0 0 20px;
   padding: 0;
+font-family: "Times New Roman", Georgia, Serif;
+font-size:16px;
 }
-
+ 
 strong {
   color: #222;
   font-weight: 700;
